Add content to welcome index

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,32 @@
-%h1 Find me in app/views/welcome/index.html.erb
+#banner
+  .banner_content
+    %h1 NoteNote
+    %p Your online Notebook. Never forget an idea again.
+    %button= link_to 'Sign Up', new_user_registration_path
+
+#testimonial
+  .wrapper
+    %p.quote "The greatest notebook application."
+    %p.name - Marcus Pereira
+
+#callouts
+  .callout_inner
+    .wrapper
+      .callout
+        %h2 Notes
+        %p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione natus sapiente magni nesciunt iusto rem possimus molestiae nobis consequuntur aut dicta quisquam soluta, dolorum ut magnam voluptatibus corrupti nisi sequi!
+      .callout
+        %h2 Rocket
+        %p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione natus sapiente magni nesciunt iusto rem possimus molestiae nobis consequuntur aut dicta quisquam soluta, dolorum ut magnam voluptatibus corrupti nisi sequi!
+      .callout
+        %h2 Lightning
+        %p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione natus sapiente magni nesciunt iusto rem possimus molestiae nobis consequuntur aut dicta quisquam soluta, dolorum ut magnam voluptatibus corrupti nisi sequi!
+
+#bottom_cta
+  .wrapper
+    %h2 For Realz!
+    %p I want you to sign up... If you don't, I'll find you!
+    %button= link_to 'Click Meeee!!!', new_user_registration_path
+
+%footer
+  %p &copy; Marcus Pereira
